// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<div
  class="App"
>
  <div
    class="Welcome"
  >
    <div
      class="Welcome-Jumbo"
    >
      <h1>
        Welcome to Polyswarm,
      </h1>
      <h2>
        The first 
        <em>
          decentralized
        </em>
         antivirus marketplace.
      </h2>
      <p>
        Simply upload files to create your own bounties and then let the microengines on Polyswarm analyze your file.
      </p>
      <button
        class="Button"
      >
        Get Started!
      </button>
    </div>
  </div>
</div>
`;

exports[`shows BountyInfo when at least one bounty & active is negative 1`] = `
<App>
  <div
    className="App"
  >
    <Sidebar
      active={-1}
      bounties={
        Array [
          Object {
            "guid": "asdf",
          },
        ]
      }
      remove={[Function]}
      select={[Function]}
    >
      <div
        className="Sidebar"
      >
        <header
          className="Sidebar-Header"
        >
          <img
            alt="Polyswarm logo"
            src="/img/polyswarm.svg"
          />
        </header>
        <ul
          className="Sidebar-Content"
        >
          <ListItem
            active={false}
            className="item-0"
            key="asdf"
            onClick={[Function]}
            remove={[Function]}
          >
            <li
              className="ListItem"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="ListItem-Child"
              >
                asdf
              </div>
            </li>
          </ListItem>
        </ul>
      </div>
    </Sidebar>
    <Header
      onClick={[Function]}
      title="Create a Bounty"
    >
      <header
        className="Header"
      >
        <h1>
          Create a Bounty
        </h1>
        <Button
          className="Header-Button"
          onClick={[Function]}
        >
          <button
            className="Button"
            onClick={[Function]}
          >
            + Bounty
          </button>
        </Button>
      </header>
    </Header>
    <div
      className="App-Content"
    >
      <BountyCreate
        addBounty={[Function]}
        url="https://localhost:8080"
      >
        <div
          className="Bounty-Create"
        >
          <div
            className="Container"
          >
            <DropTarget
              onFilesSelected={[Function]}
            >
              <div
                className="Drop-Target"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
              >
                <div>
                  <p>
                    Drag and drop your files here, or 
                  </p>
                  <FileButton
                    onFileSelected={[Function]}
                  >
                    <form>
                      <input
                        className="hidden"
                        id="file"
                        onChange={[Function]}
                        type="file"
                      />
                      <label
                        htmlFor="file"
                      >
                        click here.
                      </label>
                    </form>
                  </FileButton>
                </div>
              </div>
            </DropTarget>
            <FileList
              clear={[Function]}
              files={Array []}
              removeFile={[Function]}
            >
              <div
                className="File-List"
              >
                <header
                  className="File-List-Header"
                >
                  <p
                    className="File-List-Title"
                  >
                    0
                     
                    Files
                  </p>
                  <Button
                    className="Clear-Button"
                    disabled={true}
                    onClick={[Function]}
                  >
                    <button
                      className="Button"
                      disabled={true}
                      onClick={[Function]}
                    >
                      - Clear
                    </button>
                  </Button>
                </header>
                <ul
                  className="List"
                />
              </div>
            </FileList>
            <Button
              cancel={false}
              className="Bounty-Create-Upload"
              disabled={true}
              onClick={[Function]}
            >
              <button
                className="Button"
                disabled={true}
                onClick={[Function]}
              >
                Create Bounty
              </button>
            </Button>
          </div>
        </div>
      </BountyCreate>
    </div>
  </div>
</App>
`;

exports[`shows BountyInfo when at least one bounty & active selects it 1`] = `
<App>
  <div
    className="App"
  >
    <Sidebar
      active={0}
      bounties={
        Array [
          Object {
            "guid": "asdf",
          },
        ]
      }
      remove={[Function]}
      select={[Function]}
    >
      <div
        className="Sidebar"
      >
        <header
          className="Sidebar-Header"
        >
          <img
            alt="Polyswarm logo"
            src="/img/polyswarm.svg"
          />
        </header>
        <ul
          className="Sidebar-Content"
        >
          <ListItem
            active={true}
            className="item-0"
            key="asdf"
            onClick={[Function]}
            remove={[Function]}
          >
            <li
              className="ListItem active"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="ListItem-Child"
              >
                asdf
              </div>
            </li>
          </ListItem>
        </ul>
      </div>
    </Sidebar>
    <Header
      onClick={[Function]}
      title="asdf"
    >
      <header
        className="Header"
      >
        <h1>
          asdf
        </h1>
        <Button
          className="Header-Button"
          onClick={[Function]}
        >
          <button
            className="Button"
            onClick={[Function]}
          >
            + Bounty
          </button>
        </Button>
      </header>
    </Header>
    <div
      className="App-Content"
    >
      <BountyInfo
        bounty={
          Object {
            "guid": "asdf",
          }
        }
      >
        <div
          className="Bounty-Info"
        >
          <div
            className="Bounty-Info-Container"
          >
            <FileList
              className="Bounty-Info-Files"
              files={Array []}
              readonly={true}
            >
              <div
                className="File-List"
              >
                <header
                  className="File-List-Header"
                >
                  <p
                    className="File-List-Title"
                  >
                    0
                     
                    Files
                  </p>
                </header>
                <ul
                  className="List"
                />
              </div>
            </FileList>
          </div>
        </div>
      </BountyInfo>
    </div>
  </div>
</App>
`;

exports[`shows create when no bounties found 1`] = `null`;
